# character_generator

./: Cargo.toml  README.md
src/: generate.rs  main.rs
